# sighttpd

./: Makefile.am  README  README.sh-mobile  TODO  configure.ac  tcpserver-threaded.c  timer.c
doc/: Makefile.am  admin-guide.txt  sighttpd.8  sighttpd.conf.5
examples/: Makefile.am  mjpeg_test.sh  sighttpd-720p.conf  sighttpd-ffmp3-crossdomain.conf  sighttpd-multi.conf  sighttpd-oggstdin.conf  sighttpd-stdin-h264.conf  sighttpd-stdin-mjpeg.conf  sighttpd-stdin-ogv.conf
release_notes/: sighttpd-1.0.0.txt  sighttpd-1.1.0.txt  sighttpd-1.2.0.txt
src/: ControlFileUtil.c  ControlFileUtil.h  Makefile.am  anx_list.c  anx_list.h  anx_params.c  anx_params.h  avcbencsmp.h  capture.c  capture.h  cfg-parse-test.c  cfg-parse.c  cfg-parse.h  cfg-read.c  cfg-read.h  config.c  dictionary-test.c  dictionary.c  dictionary.h  display.c  display.h  fdstream.c  fdstream.h  flim.c  flim.h  framerate.c  framerate.h  http-date.c  http-date.h  http-date_test.c  http-reqline.c  http-reqline.h  http-reqline_test.c  http-response.c  http-response.h  http-status.c  http-status.h  http.c  http.h  httpdate_test.c  (+47 more)
src/shrec/: Makefile.am  capture.c  framerate.c
src/shrecord/: Makefile.am  capture.h  shrecord.c  thrqueue.c
